<resources>
    <string name="app_name">TaskProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tx_drawer_done">Feitas</string>
    <string name="tx_drawer_todo">Pendentes</string>
    <string name="tx_drawer_logout">Sair</string>
    <string name="tx_edithint_nome">Nome</string>
    <string name="txt_edithint_email">Email</string>
    <string name="tx_edithint_pass">Senha</string>
    <string name="tx_cadastrar">Cadastrar</string>
    <string name="informe_campos">Informe todos os campos</string>
    <string name="erro_inesperado">Algo de errado aconteceu, tente novamente</string>
    <string name="email_uso">Email já em uso</string>
    <string name="entrar">Entrar</string>
    <string name="usuario_senha_incorretos">Usuário e/ou senha incorretos!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descricao">Descrição</string>
    <string name="check_completa">Completa</string>
    <string name="clique_selecionar_data">Clique para selecionar a data</string>
    <string name="adicionar_tarefa">Adicionar tarefa</string>
    <string name="erro_inesperado_tentenovamente">Erro inesperado, tente novamente</string>
    <string name="tarefa_incluida">Tarefa incluida com sucesso!</string>
    <string name="tarefa_alterada">Tarefa alterada com sucesso!</string>
    <string name="tarefa_removida">Tarefa removida om sucesso!</string>
    <string name="msg_title_dialog_task">Remoção de tarefa</string>
    <string name="perg_remov_task">Deseja remover?</string>
    <string name="remover_dialog">Remover</string>
    <string name="remove_cancela">Cancelar</string>
    <string name="ola_toolbar">Olá,</string>
    <string name="atualizar_tarefa">Atualizar tarefa!</string>
    <string name="tv_prioridade_register">Prioridade</string>
</resources>
