<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.RegisterActivity"
        android:padding="@dimen/activity_vertical_margin">

    <EditText
            android:id="@+id/editName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/tx_edithint_nome"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/editEmail"
            style="@style/mGrayEditText" android:drawableLeft="@drawable/ic_name"/>

    <EditText
            android:id="@+id/editEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/txt_edithint_email"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/editName" app:layout_constraintBottom_toTopOf="@+id/editPassword"
            style="@style/mGrayEditText" android:drawableLeft="@drawable/ic_mail"/>

    <EditText
            android:id="@+id/editPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/tx_edithint_pass"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/editEmail"
            style="@style/mGrayEditText" android:drawableLeft="@drawable/ic_lock"/>

    <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_cadastrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" style="@style/mDefaultButton"/>


</android.support.constraint.ConstraintLayout>