<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".views.TaskFormActivity" android:background="@android:color/transparent">
    <EditText
            android:id="@+id/editDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/descricao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" style="@style/mGrayEditText" android:lines="2"/>

    <TextView
            android:text="@string/tv_prioridade_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/editDescription" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:paddingLeft="25dp"/>
    <Spinner
            android:id="@+id/spinnerPriority"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="8dp"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ececec"
            tools:layout_editor_absoluteX="24dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/spinnerPriority"
            android:id="@+id/view2"/>
    <CheckBox
            android:id="@+id/checkComplete"
            android:layout_width="0dp"
            android:layout_height="21dp"
            android:text="@string/check_completa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.75"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/view2"
            style="@style/mGrayTextView" android:button="@drawable/checkbox_selector" android:paddingLeft="10dp"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ececec"
            tools:layout_editor_absoluteX="5dp"
            android:id="@+id/view3" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/checkComplete"/>
    <Button
            android:id="@+id/buttonDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/clique_selecionar_data"
            app:layout_constraintHorizontal_bias="0.496" app:layout_constraintTop_toBottomOf="@+id/view3"
            android:layout_marginTop="24dp" android:background="@android:color/transparent"
            android:textColor="@color/colorGrayText" android:textColorHint="@color/colorGrayText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:gravity="center_vertical"/>


    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ececec"
            tools:layout_editor_absoluteX="24dp"
            android:id="@+id/view4" app:layout_constraintTop_toBottomOf="@+id/buttonDate"
            android:layout_marginTop="24dp"/>

    <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/adicionar_tarefa"
            app:layout_constraintBottom_toBottomOf="parent" style="@style/mDefaultButton"/>


</android.support.constraint.ConstraintLayout>