<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_vertical_margin"
        android:background="@drawable/linear_background"
        tools:context=".views.LoginActivity">

    <EditText
            android:id="@+id/editEmail"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="@string/txt_edithint_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginTop="60dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:drawableLeft="@drawable/ic_user"
            android:drawablePadding="10dp" style="@style/mWhiteEditText"/>

    <EditText
            android:id="@+id/editPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/tx_edithint_pass"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editEmail" style="@style/mWhiteEditText"
            android:drawableLeft="@drawable/ic_lock" android:drawablePadding="10dp"/>
    <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entrar"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/editPassword" style="@style/mDefaultButton"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
            android:layout_width="180dp"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_logotipo"
            android:id="@+id/imageView2" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="Não tem uma conta?"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/mWhiteTextView"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.18"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline3"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.82"/>
    <TextView
            android:text="Cadastre-se"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textRegister"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/guideline3"
            style="@style/mWhiteTextView" android:textStyle="bold"/>

</android.support.constraint.ConstraintLayout>